out toggle view

--- a/animation_view.html
+++ b/animation_view.html
@@ -21,7 +21,7 @@
 <header>
     <div class="navbar">
 
-        <a href="index_main.html" style='border-radius:2px;'>Home</a>
+        <a href="index.html" style='border-radius:2px;'>Home</a>
 
         <!--       <div class="dropdown">
             <button class="dropbtn">Overview
