--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar">
 
         <a style='background-color: dodgerblue;
-        color: white; border-radius:2px;' href="index_main.html">Home</a>
+        color: white; border-radius:2px;' href="index.html">Home</a>
         <!-- <div class="dropdown">
             <button class="dropbtn">Overview
                 <i class="fa fa-caret-down"></i>
