--- a/pages/index_single_choice.html
+++ b/pages/index_single_choice.html
@@ -90,7 +90,7 @@
 <header>
     <div class="navbar">
 
-        <a style='border-radius:2px;' href="../index_main.html">Home</a>
+        <a style='border-radius:2px;' href="../index.html">Home</a>
 
         <!--  <div class="dropdown">
             <button class="dropbtn">Overview
