taken out the collapse function of the various vis.

--- a/pages/index_single_choice.html
+++ b/pages/index_single_choice.html
@@ -3364,7 +3364,7 @@
             style='color: black;transform: rotate(180deg) ' class="fas fa-angle-left"></i></a>
     </h4>
     <div id="ShowPerWeekday" class="collapse" style='overflow-x: hidden;overflow-y:visible; width:100%'>
-        <!-- <div style='text-align: center;'> -->
+        <!--  <div style='text-align: center;'> -->
 
         <h3 style='position:relative;left:100px; text-align: left;'>LampeDrehwand</h3>
         <div id='radial_barcharts' style='position:relative;left:4.5%; overflow-x: hidden;overflow-y:hidden; width:100%'>
@@ -3467,7 +3467,8 @@
 
 
     </div> <br><br>
-    <div id="Parset" class="collapse">
+    <div id="Parset">
+        <!-- COLLAPSEclass="collapse">-->
 
 
         <div id='parset' style='text-align: center;'>
@@ -3498,7 +3499,8 @@
 
 
     </div> <br><br>
-    <div id="OverviewWeeks" class="collapse">
+    <div id="OverviewWeeks">
+        <!-- COLLAPSEclass="collapse">-->
 
         <div style='text-align: center;'>
 
@@ -3551,7 +3553,8 @@
         </p>
     </div>
 
-    <div id="WeekAnalysis" class="collapse">
+    <div id="WeekAnalysis">
+        <!-- COLLAPSEclass="collapse">-->
 
         <div id='week_profile' style='position:relative; top: 40px ;'>
             <div id='div_week_p0' style='text-align: center;'></div>
@@ -3575,7 +3578,8 @@
             <br>Note, these histograms show exactly the same results as the <i>Double Grouped Radial Histograms</i> on the top of the page, except that the values outside the range were not truncated.
         </p>
     </div>
-    <div id="FreqPerAngleTo" class="collapse">
+    <div id="FreqPerAngleTo">
+        <!-- COLLAPSEclass="collapse">-->
 
         <div style='position:relative; top: 40px;overflow-x: hidden;'>
             <div id='freq_per_angle_0' style='text-align: center;'></div>
@@ -3601,7 +3605,8 @@
     </div>
     <br>
     <br>
-    <div id="FreqPerAngleAbs" class="collapse">
+    <div id="FreqPerAngleAbs">
+        <!-- COLLAPSEclass="collapse">-->
 
         <div style='text-align: right;position:relative;right:13%'>
 
@@ -3655,7 +3660,8 @@
     </div>
     <br><br>
 
-    <div id="ToFromScatter" class="collapse">
+    <div id="ToFromScatter">
+        <!-- COLLAPSEclass="collapse">-->
 
         <div style='text-align: right;position:relative;right:13%'>
 
@@ -3747,7 +3753,8 @@
     </div>
     <br><br>
 
-    <div id="ScatterMatrix" class="collapse">
+    <div id="ScatterMatrix">
+        <!-- COLLAPSEclass="collapse">-->
 
         <div>
             <div style='text-align: center;' id="scatter_matrix"></div>
@@ -4051,7 +4058,8 @@
         <a href="#MostCommonWords" class="btn-info" data-toggle="collapse"><i id='arrowplayMCW'
                 style='color: black;transform: rotate(180deg) ' class="fas fa-angle-left"></i></a>
     </h2>
-    <div id="MostCommonWords" class="collapse">
+    <div id="MostCommonWords">
+        <!-- COLLAPSEclass="collapse">-->
 
         <div style='width: 88%'>
             <label id='input_label' style='position: relative; left: 150px'>word length: </label>
