--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6420,6 +6420,9 @@
     <br>
 
     <div id='radial_barcharts' style='position:relative;left: 0; overflow-x: hidden; overflow-y: visible; width:100%'>
+        <button class="setAll" id='setAll' title="deselect all bars">
+            <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
+        </button>
 
         <div style='float:left;position: relative; width:25%' id='lampeDrehwand'>
             <button class="resetButton" id='reset3' title="deselect all bars">
