--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6426,7 +6426,7 @@
             <button class="resetButton" id='reset3' title="deselect all bars">
                 <i class="material-icons" style='font-size: 15px; color:purple'>highlight_off</i>
             </button>
-            <button class="resetButton" id='setAll' title="select all bars">
+            <button class="resetButton" id='setAll0' title="select all bars">
                 <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
             </button>
         </div>
