--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6426,10 +6426,11 @@
             <button class="resetButton" id='reset3' title="deselect all bars">
                 <i class="material-icons" style='font-size: 15px; color:purple'>highlight_off</i>
             </button>
-            <button class="resetButton" id='setAll0' title="select all bars" left=20>
+
+        </div>
+        <button class="resetButton" id='setAll0' title="select all bars">
                 <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
             </button>
-        </div>
         <div style='float:left ;position: relative; width:25%;' id='drehwand'>
             <button class="resetButton" id='reset0' title="deselect all bars">
                 <i class="material-icons" style='font-size: 15px; color:red'>highlight_off</i>
