--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6414,6 +6414,12 @@
                 <option value=0>absolute</option>
                 <option value=1>relative</option>
             </select>
+            <button class="resetButton" id='setAll0' title="select all bars">
+                <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
+            </button>
+            <button class="resetButton" id='deselectAll' title="select all bars">
+                <i class="material-icons" style='font-size: 15px; color:black'>highlight_off</i>
+            </button>
         </div>
     </div>
 
@@ -6428,9 +6434,7 @@
             </button>
 
         </div>
-        <button class="resetButton" id='setAll0' title="select all bars">
-                <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
-            </button>
+
         <div style='float:left ;position: relative; width:25%;' id='drehwand'>
             <button class="resetButton" id='reset0' title="deselect all bars">
                 <i class="material-icons" style='font-size: 15px; color:red'>highlight_off</i>
