--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6414,10 +6414,10 @@
                 <option value=0>absolute</option>
                 <option value=1>relative</option>
             </select>
-            <button class="resetButton" id='setAll0' title="select all bars">
+            <button class="allButton" id='setAll0' title="select all bars">
                 <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
             </button>
-            <button class="resetButton" id='deselectAll' title="select all bars">
+            <button class="aButton" id='deselectAll' title="select all bars">
                 <i class="material-icons" style='font-size: 15px; color:black'>highlight_off</i>
             </button>
         </div>
