--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6417,7 +6417,7 @@
             <button class="allButton" id='setAll0' title="select all bars">
                 <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
             </button>
-            <button class="aButton" id='deselectAll' title="select all bars">
+            <button class="allButton" id='deselectAll' title="select all bars">
                 <i class="material-icons" style='font-size: 15px; color:black'>highlight_off</i>
             </button>
         </div>
@@ -6432,7 +6432,6 @@
             <button class="resetButton" id='reset3' title="deselect all bars">
                 <i class="material-icons" style='font-size: 15px; color:purple'>highlight_off</i>
             </button>
-
         </div>
 
         <div style='float:left ;position: relative; width:25%;' id='drehwand'>
