--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -19,6 +19,26 @@
         padding: 0px;
         overflow-x: hidden;
     }
+    
+    .allButton {
+        background: white;
+        /* Blue background */
+        border: none;
+        /* Remove borders */
+        padding: 8px 8px 8px 8px;
+        /* Some padding */
+        font-size: 15px;
+        border-radius: 8px;
+        /* Set a font size */
+        cursor: pointer;
+        text-align: center;
+        /* Mouse pointer on hover */
+        position: absolute;
+        font-size: 30px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
 </style>
 <header>
     <div class="navbar">
@@ -6417,9 +6437,7 @@
             <button class="allButton" id='setAll0' title="select all bars">
                 <i class="material-icons" style='font-size: 15px; color:black'>check_circle_outline</i>
             </button>
-            <button class="allButton" id='deselectAll' title="select all bars">
-                <i class="material-icons" style='font-size: 15px; color:black'>highlight_off</i>
-            </button>
+
         </div>
     </div>
 
