--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6779,7 +6779,7 @@
 <div class='introtext'>
     <p class='p_text'>
         The view shows a scatter plot of a rotatable element for rotations. Each rotation is defined by a <i>To</i> and <i>From</i> angle. This scatter plot draws a dot for each rotation, where the x component is the angle the moved <i>To</i> and the
-        y component the angle moved <i>From</i>. Every dot was drawn with an opacity of 0.7 to highlight clusters of points.
+        y component the angle moved <i>From</i>. Every dot was drawn with an opacity of 0.5 to highlight clusters of points.
         <br>The scatter plot can be viewd for the two groups individually or together. To toogle between the view, click on the <i class="fas fa-object-ungroup"></i> symbol.
 
     </p>
@@ -6789,9 +6789,6 @@
 
     <div id="ToFromScatterComp">
         <!-- COLLAPSEclass="collapse">-->
-
-
-
         <div style='text-align: right;position:relative;right:13%'>
             <i id='toggleViewTFSC' style='font-size:2em; cursor: pointer;' title="View Side By Side" class="fas fa-object-ungroup"></i>
         </div>
@@ -6885,16 +6882,11 @@
     </p>
 </div>
 <br><br>
-<div id="ScatterMatrix">
-    <!-- COLLAPSEclass="collapse">-->
-
-
-
+<div id="ScatterMatrix" class="collapse">
     <div>
         <div style='position:relative;left:250px' id="scatter_matrix_comp"></div>
 
     </div>
-
 
 </div>
 
