--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6519,10 +6519,10 @@
     </div> <br><br>
     <div w3-include-html="index_parset.html"></div>
 
-    <div id="Parset" class="collapse"></div>
-    <div id='parsetcomp' style='text-align: center;'>
+    <div id="Parset" class="collapse">
+        <div id='parsetcomp' style='text-align: center;'>
+        </div>
     </div>
-</div>
 
 </div>
 
@@ -6554,56 +6554,57 @@
 
 
     </div> <br><br>
-    <div id="OverviewWeeks" class="collapse"></div>
-    <div>
-        <div style="left:80%; position:relative">
-            <svg width='17' height='13'>
+    <div id="OverviewWeeks" class="collapse">
+
+        <div>
+            <div style="left:80%; position:relative">
+                <svg width='17' height='13'>
                 <rect width='13' height='13' style='fill: rgb(87, 162, 192)'></rect>
             </svg><label>Group 1</label>
-            <br>
-            <svg width='17' height='13'>
+                <br>
+                <svg width='17' height='13'>
                 <rect width='13' height='13' style='fill: rgb(235, 122, 69)'></rect>
             </svg><label>Group 2</label>
 
-            <br>
-            <svg width='17' height='13'>
+                <br>
+                <svg width='17' height='13'>
             <rect width='13' height='13' style='fill:purple'></rect>
         </svg><label>Both</label>
 
+            </div>
         </div>
-    </div>
-    <br>
+        <br>
 
-    <div style='text-align: center;'>
+        <div style='text-align: center;'>
 
-        <div id='week_overview_comp_Drehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
-        <div id='week_avg_comp_Drehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
+            <div id='week_overview_comp_Drehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
+            <div id='week_avg_comp_Drehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
 
-    </div>
-
-    <div style='text-align: center;'>
-
-        <div id='week_overview_comp_Drehschrank' style="display: inline-block;  width: 49%;position: relative;">
-        </div>
-        <div id='week_avg_comp_Drehschrank' style="display: inline-block;  width: 49%;position: relative;"></div>
-
-    </div>
-    <div style='text-align: center;float: none;'>
-
-        <div id='week_overview_comp_LampeDrehwand' style="display: inline-block;  width: 49%;position: relative;">
-        </div>
-        <div id='week_avg_comp_LampeDrehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
-    </div>
-    <div style='text-align: center;'>
-
-        <div id='week_overview_comp_LampeAussenwand' style="display: inline-block;  width: 49%;position: relative;">
-        </div>
-        <div id='week_avg_comp_LampeAussenwand' style="display: inline-block;  width: 49%;position: relative;">
         </div>
 
-    </div>
+        <div style='text-align: center;'>
 
-</div>
+            <div id='week_overview_comp_Drehschrank' style="display: inline-block;  width: 49%;position: relative;">
+            </div>
+            <div id='week_avg_comp_Drehschrank' style="display: inline-block;  width: 49%;position: relative;"></div>
+
+        </div>
+        <div style='text-align: center;float: none;'>
+
+            <div id='week_overview_comp_LampeDrehwand' style="display: inline-block;  width: 49%;position: relative;">
+            </div>
+            <div id='week_avg_comp_LampeDrehwand' style="display: inline-block;  width: 49%;position: relative;"></div>
+        </div>
+        <div style='text-align: center;'>
+
+            <div id='week_overview_comp_LampeAussenwand' style="display: inline-block;  width: 49%;position: relative;">
+            </div>
+            <div id='week_avg_comp_LampeAussenwand' style="display: inline-block;  width: 49%;position: relative;">
+            </div>
+
+        </div>
+
+    </div>
 </div>
 <div class="container">
 
@@ -6630,29 +6631,29 @@
         </p>
     </div>
 
-    <div id="WeekAnalysisComp" class="collapse"></div>
+    <div id="WeekAnalysisComp" class="collapse">
 
-    <div id='week_profile' style='text-align:center;position:relative; top: 40px;float: unset ;'>
+        <div id='week_profile' style='text-align:center;position:relative; top: 40px;float: unset ;'>
 
-        <div style='text-align:center'>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p0_left'></div>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p0_right'></div>
-        </div>
-        <div style='text-align:center'>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p1_left'></div>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p1_right'></div>
-        </div>
-        <div style='text-align:center'>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p3_left'></div>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p3_right'></div>
-        </div>
-        <div style='text-align:center'>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p2_left'></div>
-            <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p2_right'></div>
-        </div>
+            <div style='text-align:center'>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p0_left'></div>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p0_right'></div>
+            </div>
+            <div style='text-align:center'>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p1_left'></div>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p1_right'></div>
+            </div>
+            <div style='text-align:center'>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p3_left'></div>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p3_right'></div>
+            </div>
+            <div style='text-align:center'>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p2_left'></div>
+                <div style="position:relative; ;display:inline-block;width: 45%;" id='div_week_p2_right'></div>
+            </div>
 
+        </div>
     </div>
-</div>
 </div>
 <div class="container">
     <h2 style='position:relative;left:60px;'>Frequency of Usage per Angle
@@ -6776,40 +6777,40 @@
 <br><br>
 <div class='container'>
 
-    <div id="ToFromScatterComp" class="collapse"></div>
-    <div style='text-align: right;position:relative;right:13%'>
-        <i id='toggleViewTFSC' style='font-size:2em; cursor: pointer;' title="View Side By Side" class="fas fa-object-ungroup"></i>
-    </div>
-    <div style='left: 50px;position:relative;' id='beloweachother'>
-        <!-- <span class="leftlabel">0</span>
+    <div id="ToFromScatterComp" class="collapse">
+        <div style='text-align: right;position:relative;right:13%'>
+            <i id='toggleViewTFSC' style='font-size:2em; cursor: pointer;' title="View Side By Side" class="fas fa-object-ungroup"></i>
+        </div>
+        <div style='left: 50px;position:relative;' id='beloweachother'>
+            <!-- <span class="leftlabel">0</span>
             <input id="tofromopacity" type="range" min="0" max="100" value="100" style="width:450px; margin-right: 150px;" />
             <span class="rightlabel">1</span> -->
-        <div id="scatter_comp_0"></div>
-        <div id="scatter_comp_1"></div>
-        <div id="scatter_comp_2"></div>
-        <div id="scatter_comp_3"></div>
-    </div>
-    <div style='left: -50px;position:relative ;' id='sidebyside'>
-        <div style='text-align: center;'>
-            <div id='scatter_0_left' style="display: inline-block; width: 45%;"></div>
-            <div id='scatter_0_right' style="display: inline-block; width: 45%; "></div>
+            <div id="scatter_comp_0"></div>
+            <div id="scatter_comp_1"></div>
+            <div id="scatter_comp_2"></div>
+            <div id="scatter_comp_3"></div>
         </div>
-        <div style='text-align: center;'>
-            <div id='scatter_1_left' style="display: inline-block;  width: 45%; "></div>
-            <div id='scatter_1_right' style="display: inline-block;  width: 45%;"></div>
-        </div>
-        <div style='text-align: center;'>
-            <div id='scatter_2_left' style="display: inline-block;  width: 45%; "></div>
-            <div id='scatter_2_right' style="display: inline-block;  width: 45%;"></div>
-        </div>
-        <div style='text-align: center;'>
-            <div id='scatter_3_left' style="display: inline-block;   width: 45%; "></div>
-            <div id='scatter_3_right' style="display: inline-block; width: 45%;"></div>
+        <div style='left: -50px;position:relative ;' id='sidebyside'>
+            <div style='text-align: center;'>
+                <div id='scatter_0_left' style="display: inline-block; width: 45%;"></div>
+                <div id='scatter_0_right' style="display: inline-block; width: 45%; "></div>
+            </div>
+            <div style='text-align: center;'>
+                <div id='scatter_1_left' style="display: inline-block;  width: 45%; "></div>
+                <div id='scatter_1_right' style="display: inline-block;  width: 45%;"></div>
+            </div>
+            <div style='text-align: center;'>
+                <div id='scatter_2_left' style="display: inline-block;  width: 45%; "></div>
+                <div id='scatter_2_right' style="display: inline-block;  width: 45%;"></div>
+            </div>
+            <div style='text-align: center;'>
+                <div id='scatter_3_left' style="display: inline-block;   width: 45%; "></div>
+                <div id='scatter_3_right' style="display: inline-block; width: 45%;"></div>
+            </div>
+
         </div>
 
     </div>
-
-</div>
 </div>
 <h2 style='position:relative;left:60px; width: 500px'>Scatter Matrix
 
