--- a/pages/index_single_choice.html
+++ b/pages/index_single_choice.html
@@ -3467,8 +3467,7 @@
 
 
     </div> <br><br>
-    <div id="Parset">
-        <!-- COLLAPSEclass="collapse">-->
+    <div id="Parset" class="collapse">
 
 
         <div id='parset' style='text-align: center;'>
@@ -3499,8 +3498,7 @@
 
 
     </div> <br><br>
-    <div id="OverviewWeeks">
-        <!-- COLLAPSEclass="collapse">-->
+    <div id="OverviewWeeks" class="collapse">
 
         <div style='text-align: center;'>
 
@@ -3553,8 +3551,7 @@
         </p>
     </div>
 
-    <div id="WeekAnalysis">
-        <!-- COLLAPSEclass="collapse">-->
+    <div id="WeekAnalysis" class="collapse">
 
         <div id='week_profile' style='position:relative; top: 40px ;'>
             <div id='div_week_p0' style='text-align: center;'></div>
@@ -3578,8 +3575,7 @@
             <br>Note, these histograms show exactly the same results as the <i>Double Grouped Radial Histograms</i> on the top of the page, except that the values outside the range were not truncated.
         </p>
     </div>
-    <div id="FreqPerAngleTo">
-        <!-- COLLAPSEclass="collapse">-->
+    <div id="FreqPerAngleTo" class="collapse">
 
         <div style='position:relative; top: 40px;overflow-x: hidden;'>
             <div id='freq_per_angle_0' style='text-align: center;'></div>
@@ -3605,8 +3601,7 @@
     </div>
     <br>
     <br>
-    <div id="FreqPerAngleAbs">
-        <!-- COLLAPSEclass="collapse">-->
+    <div id="FreqPerAngleAbs" class="collapse">
 
         <div style='text-align: right;position:relative;right:13%'>
 
@@ -3660,8 +3655,7 @@
     </div>
     <br><br>
 
-    <div id="ToFromScatter">
-        <!-- COLLAPSEclass="collapse">-->
+    <div id="ToFromScatter" class="collapse">
 
         <div style='text-align: right;position:relative;right:13%'>
 
@@ -3753,8 +3747,7 @@
     </div>
     <br><br>
 
-    <div id="ScatterMatrix">
-        <!-- COLLAPSEclass="collapse">-->
+    <div id="ScatterMatrix" class="collapse">
 
         <div>
             <div style='text-align: center;' id="scatter_matrix"></div>
