--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -6432,7 +6432,7 @@
                 <option value="1">Duration of States</option>
             </select>
             <label> Reference Type: </label>
-            <select id='input_referenceType'>
+            <select id='input_referenceType' style='width:80px'>
                 <option value=0>absolute</option>
                 <option value=1>relative</option>
             </select>
