--- a/pages/index_comparison.html
+++ b/pages/index_comparison.html
@@ -38,6 +38,7 @@
         align-items: center;
         justify-content: center;
         display: flex;
+        display: inline-block;
     }
 </style>
 <header>
